# NetISDN

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  acinclude-old.m4  acinclude.m4  autogen.sh  build_win32.bat  configure.ac  configure.in  make_slack.in  netisdn.conf-sample  netisdn.ism  netisdn.pro  netisdn.spec.in  netsipd.conf-sample  rc.netisdn.in  slack-desc.in  slack_doinst.sh
client/: Makefile.am  decoder.c  encoder.c  pa_decoder.c  pa_encoder.c
docs/: Makefile.am  control_protocol.txt  gpl2.rtf
docs/tables/: Makefile.am  calls.txt  users.txt
helpers/: Makefile.am
icons/: Makefile.am  active_call.xpm  autorun.inf.in  call.xpm  netisdn-22x22.xpm  netisdn-48x48.xpm
lib/: Makefile.am  audiosettings.cpp  audiosettings.h  check_version.cpp  check_version.h  cmd_switch.cpp  cmd_switch.h  codec.cpp  codec.h  codec_stats.cpp  codec_stats.h  controlconnect.cpp  controlconnect.h  datedialog.cpp  datedialog.h  datepicker.cpp  datepicker.h  dbversion.h  escape_string.cpp  escape_string.h  historybox.cpp  historybox.h  lib.pro  login.cpp  login.h  meteraverage.cpp  meteraverage.h  netconf.cpp  netconf.h  netconfig.cpp  netconfig.h  netlistviewitem.cpp  netlistviewitem.h  oneshot.cpp  oneshot.h  passwd.cpp  passwd.h  playmeter.cpp  playmeter.h  profile.cpp  (+20 more)
netadmin/: Makefile.am  add_user.cpp  add_user.h  createdb.cpp  createdb.h  edit_user.cpp  edit_user.h  globals.h  list_calls.cpp  list_calls.h  list_users.cpp  list_users.h  mysql_login.cpp  mysql_login.h  netadmin.cpp  netadmin.h  opendb.cpp  opendb.h
netfilter/: Makefile.am  iprules.sh  netfilter.c
netisdn/: Makefile.am  advanced_dialog.cpp  advanced_dialog.h  audiosettings_dialog.cpp  audiosettings_dialog.h  netisdn.cpp  netisdn.h  netisdn.pro  stats_dialog.cpp  stats_dialog.h
netsipd/: Makefile.am  netsipd.cpp  netsipd.h  serversocket.cpp  serversocket.h  sipconnection.cpp  sipconnection.h
systemd/: Makefile.am  daemon-reload.sh  netisdn.service.in
xdg/: Makefile.am  netisdn.desktop
