## automake.am
##
## docs/tables/automake.am for NetISDN
##
## (C) Copyright 2008 Fred Gleason <fredg@salemradiolabs.com>
##
##      $Id: Makefile.am,v 1.2 2008/09/05 18:02:01 cvs Exp $
##      $Date: 2008/09/05 18:02:01 $
##
##   This program is free software; you can redistribute it and/or modify
##   it under the terms of the GNU General Public License version 2 as
##   published by the Free Software Foundation.
##
##   This program is distributed in the hope that it will be useful,
##   but WITHOUT ANY WARRANTY; without even the implied warranty of
##   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
##   GNU General Public License for more details.
##
##   You should have received a copy of the GNU General Public
##   License along with this program; if not, write to the Free Software
##   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
##
##
## Use automake to process this into a Makefile.in

EXTRA_DIST = users.txt calls.txt

CLEANFILES = *~
MAINTAINERCLEANFILES = *~ Makefile.in
